fixed comments overflow in profile page

--- a/handmade_goods/assets/css/profile_user.css
+++ b/handmade_goods/assets/css/profile_user.css
@@ -82,26 +82,37 @@ tr:nth-of-type(2n) {
     text-align: center;
     flex: 1; 
     width: 100%;
-    height: 350px;
+    height: 400px;
     min-width: 300px !important;
     border: #DDD 2px solid;
 }
 
-.reviews-summary, .sales-summary{
+.reviews-summary-outer, .sales-summary {
     background: white;
     color: #1e1e1e;
     border-radius: 16px;
     text-align: center;
     flex: 1; 
-    height: 350px;
     min-width: 850px;
     padding: 20px;
     border: #DDD 2px solid;
 }
 
-.orders-table:hover, .earnings-summary:hover {
-    box-shadow: 0 14px 30px rgba(0, 0, 0, 0.15);
-    transform: translateY(-3px) scale(1.02);
+.sales-summary {
+    height: 400px;
+}
+
+.reviews-summary-outer {
+    min-height: 400px;
+    height: auto;
+    max-height: 800px;
+}
+
+.reviews-summary {
+    overflow-y: scroll;
+    box-sizing: border-box;
+    height: auto;
+    max-height: 760px;
 }
 
 .rating-overall {
